# pico_h_imu_reader

./: .gitignore  CMakeLists.txt  benchmark.txt  benchmarks.txt  build_and_run.sh  d  ism330dlc_reader.c  launchscreen.sh  main.c  pipeline.sh  transfer_uf2_topico.sh  transfer_uf2_topico_linux.sh  usb_serial_reader.py  wires.txt
src/: CMakeLists.txt
src/Fusion/Examples/Advanced/: main.c
src/Fusion/Fusion/: CMakeLists.txt  FusionAhrs.c  FusionAhrs.h  FusionStructs.h  InitFusion.c  InitFusion.h
src/i2c/: CMakeLists.txt  i2c_helpers.c
src/i2c/include/: i2c_helpers.h
src/ism330dlc/: CMakeLists.txt  ism330dlc.c
src/ism330dlc/include/: ism330dlc.h
src/ism330dlc_config/: CMakeLists.txt
src/ism330dlc_config/include/: ism330dlc_config.h
src/ism330dlc_registers/: CMakeLists.txt
src/ism330dlc_registers/include/: ism330dlc_registers.h
src/read_ops/: CMakeLists.txt  read.c  read.h
src/sh2/: CMakeLists.txt  sh2.c
src/sh2_wrapper/: CMakeLists.txt  sh2_paketti.c  sh2_paketti.h
src/utils/: CMakeLists.txt  bit_ops.c
src/utils/include/: bit_ops.h
